# cfs-refactoring

./: .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  legacy_build.sh  operating_system_layers_folder_structure.md  process.sh
.devcontainer/: Dockerfile  devcontainer.json  install_build_dependencies.sh  install_developer_tools.sh  install_formatting_tools.sh  requirements.txt  setup_build_environment_on_ubuntu_22.sh  setup_documentation_environment_on_ubuntu_22.sh
.github/workflows/: test_osal.yml  validation_pipeline.yml
cmake_modules/: CMakeDependencyDiagrams.cmake  add_coverage_testrunner.cmake  add_osal_impl_library.cmake  add_osal_ut_exe.cmake
software/: CMakeLists.txt
software/embedded_software/: CMakeLists.txt
software/embedded_software/platform/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/: CMakeLists.txt  default_config.cmake
software/embedded_software/platform/operating_system_abstraction_layers/board_support_packages/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/board_support_packages/generic-linux/: CMakeLists.txt  build_options.cmake
software/embedded_software/platform/operating_system_abstraction_layers/board_support_packages/generic-linux/src/: bsp_console.c  generic_linux_bsp_internal.h
software/embedded_software/platform/operating_system_abstraction_layers/board_support_packages/generic-rtems/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/board_support_packages/generic-vxworks/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/pc-rtems/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/posix/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/rtems/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/shared/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/vxworks/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/vxworks/inc/: os-vxworks.h
software/embedded_software/platform/operating_system_abstraction_layers/operating_systems/vxworks/src/: os-impl-binsem.c
software/embedded_software/platform/operating_system_abstraction_layers/osal/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/osal_bsp/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/osal_public_api/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/shared/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/shared/adaptors/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/ut-stubs/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/vxworks/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/vxworks/adaptors/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-test-coverage/vxworks/ut-stubs/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/oscore-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/osfile-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/osfilesys-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/osloader-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/osnetwork-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/unit-tests/ostimer-test/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/ut-stubs/: CMakeLists.txt
software/embedded_software/platform/operating_system_abstraction_layers/tests/ut_assert/: CMakeLists.txt
software/system_interfaces/: CMakeLists.txt
software/system_interfaces/interfaces_test_utilities/: CMakeLists.txt
software/tooling/: CMakeLists.txt
